# dr-piro

./: .pre-commit-config.yaml  Cargo.toml  Dockerfile  LICENSE  README.md
.github/: renovate.json
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.mjs
frontend/public/: index.html
frontend/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  components.test.tsx
scripts/: platform-to-rust-target.sh
src/: error.rs  main.rs
