[package]
name = "dr-piro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.12"
clap = { version = "4.3.5", features = ["derive", "help", "std", "usage", "error-context"], default-features = false }
dirs = "5.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.27.0", default-features = false, features = ["macros", "fs", "rt-multi-thread", "signal"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[target.'cfg(all(target_arch = "arm", target_os = "linux"))'.dependencies]
rppal = "0.14.1"
